Implement usersStats endpoint and related user statistics model + minor changes
